SM profile updated-1

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <tr>
       <td><img src="WIN_20220215_08_33_04_Pro.jpg" alt="Shubh's Photo" width="225" height="150" </td>
       <td>
-        <h1> Amit Kumar </h1>
-        <p> <em> Director and CEO of <strong> NaturalWorld.com </strong></em></p>
-        <p> I am an Engineer and proud of it</p< /td>
+        <h1> SHUBH MALLICK </h1>
+        <p> <em> <strong> 7-"F" GCIS School </strong></em></p>
+        <p> I am a smart and intelligent boy, loves Rocket Science and proud of it</p< /td>
     </tr>
   </table>
   <hr>
