--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <h4>To find more details of TimePass click here </h4>
   <a href="myTimePass.html"> TimePass </a>
   <h4> Reach out to me: Contact details </h4>
-  <a href="contactdetails.html"> My contact details</a>
+  <a href="contactDetails.html"> My contact details</a>
 
   <h3> Skills: </h3>
 
